src/objects/APXTConga4__Composer_QuickMerge__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Conga_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Solution</label>
        <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
        <relationshipName>Composer_QuickMerge_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Launch_CM8__c</fullName>
        <description>IF( 
 OR(Weblink_ID__c = null, Weblink_ID__c = &apos;&apos;), 

 IMAGE( &quot;/resource/DisabledLaunchButton&quot;, &quot;Launch Disabled&quot;),

 HYPERLINK(&quot;https://&quot; &amp; MID( $Api.Enterprise_Server_URL_320, FIND(&quot;://&quot;, $Api.Enterprise_Server_URL_100)+3, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 )-4) 
 &amp; &quot;servlet/servlet.Integration?lid=&quot; &amp; Weblink_ID__c 
 &amp; &quot;&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&quot; 
 , IMAGE( &quot;/resource/ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; )
)</description>
        <formula>IF( 
 OR(APXTConga4__Weblink_ID__c = null, APXTConga4__Weblink_ID__c = &apos;&apos;), 

 IMAGE( &quot;/resource/DisabledLaunchButton&quot;, &quot;Launch Disabled&quot;),

 HYPERLINK(&quot;/apex/APXTConga4__SMComposer8Launcher?SampleRecordId=&quot; &amp; Id &amp; &quot;&amp;WeblinkId=&quot; &amp; APXTConga4__Weblink_ID__c &amp; &quot;&amp;SMRecordId=&quot; &amp; APXTConga4__Conga_Solution__r.Id &amp; &quot;&amp;OrganizationId=&quot; &amp; $Organization.Id
 , IMAGE( &quot;/resource/ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this button to launch the Composer QuickMerge Solution. Only available when the Button ID field is populated.</inlineHelpText>
        <label>Launch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Weblink_ID_Formula__c</fullName>
        <formula>LEFT(APXTConga4__Weblink_ID__c, 15)</formula>
        <label>Button ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Weblink_ID__c</fullName>
        <label>Button ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Weblink_Name_Formula__c</fullName>
        <formula>APXTConga4__Weblink_Name__c</formula>
        <label>Button Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Weblink_Name__c</fullName>
        <label>Button Name</label>
        <type>TextArea</type>
    </fields>
    <label>Conga Global Merge</label>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Weblink_Name_Formula__c</columns>
        <columns>APXTConga4__Conga_Solution__c</columns>
        <columns>APXTConga4__Weblink_ID_Formula__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>APXTConga4__Launch_CM8__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conga Global Merge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Global Merges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>